Make saved reviews clickable
